<resources>
    <string name="app_name">OpenBlocks</string>
    <string name="openblocks_description">OpenBlocks is a community-driven modular android application that can create android apps using block programming like scratch. Every component for OpenBlocks is modular, these modules can be loaded and unloaded at runtime, giving users freedom on what they want to do with this app. Create customizable blocks, Custom widgets, Custom manager, Custom project type, Custom everything, Anything you want with it!</string>
    <string name="version_name">0.1-alpha</string>

    <string name="menu_docs">Docs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_discord">Discord</string>
    <string name="menu_title_community">Community</string>

    <string name="projects">Projects</string>
    <string name="modules">Modules</string>

    <string name="contributors">Contributors:</string>
    <string name="activate_module">Activate module</string>

    <string name="project_editor_layout">Layout</string>
    <string name="project_editor_code">Code</string>
    <string name="project_editor_logs">Logs</string>

    <string name="new_project_prompt_app_name">App name</string>
    <string name="new_project_prompt_package_name">Package name</string>
    <string name="new_project_prompt_version_code">Version code</string>
    <string name="new_project_prompt_version_name">Version name</string>

    <string name="clear_log">Clear Log</string>
    <string name="extracting_default_modules">Extracting default modules.. (first time only)</string>
    <string name="module_success_import">Module %s has successfully imported, restarting activity</string>
    <string name="module_activate_success_restarting">Module activated successfully, restarting</string>

    <!-- <string name="new_project">New project</string> -->
    <string name="add_module">Add module</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="dialog_activate_module_confirmation">Are you sure you want to activate this module?</string>

    <string name="remove_module">Remove Module</string>

    <string name="dialog_remove_module_confirmation">Are you sure you want to remove this module?</string>
    <string name="failure_remove_active_module">You can\'t remove an active module</string>
    <string name="success_remove_module"> removed</string>

    <string name="failure_no_parser_module">No Project parser module has been loaded yet.</string>

    <string name="failure_find_blocks_collection_title">Error finding blocks collection</string>
    <string name="failure_find_blocks_collection_description">Blocks Collection with name %s not found, please find the module and install it to edit this project.</string>

    <string name="success_code_save">Code saved!</string>
    <string name="success_layout_save">Layout saved!</string>

    <string name="failure_compile_title">An error occurred while compiling</string>
    <string name="failure_compiler_description">The compiler module (%s) said:\n%s</string>
    <string name="edit">Edit</string>
    <string name="save_project">Save project</string>
    <string name="missing_app_name">Missing app name</string>
    <string name="missing_package_name">Missing package name</string>
    <string name="missing_version_name">Missing version name</string>
    <string name="missing_version_code">Missing version code</string>
    <string name="new_project">New project</string>
    <string name="create_project">Create project</string>
</resources>